--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = ../thirdparty-harfbuzz.git
 [submodule "thirdparty/jpeg"]
 	path = thirdparty/libjpeg
-	url = ../thirdparty-libjpeg.git
+	url = ../libjpeg.git
 [submodule "thirdparty/lcms2"]
 	path = thirdparty/lcms2
 	url = ../thirdparty-lcms2.git
