Revert "Changed libjpeg address"
This reverts commit 8cdecd5792d2b11ce8c720b5b02744e73b9a728a.

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = ../thirdparty-harfbuzz.git
 [submodule "thirdparty/jpeg"]
 	path = thirdparty/libjpeg
-	url = ../libjpeg.git
+	url = ../thirdparty-libjpeg.git
 [submodule "thirdparty/lcms2"]
 	path = thirdparty/lcms2
 	url = ../thirdparty-lcms2.git
